--- a/myfirst/index.html
+++ b/myfirst/index.html
@@ -6,6 +6,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Quicksand&display=swap" rel="stylesheet">
     <title>Document</title>
 </head>
 
@@ -14,12 +16,12 @@
         <img class="arrow" src="https://mfanorth.z16.web.core.windows.net/syllabus/week03/assets/arrow.svg" alt="arrow">
         <section id="jellyfish" class="firstimg">
             <div class="description">
-                <p>Fascinating, elegant, and mysterious to watch in the water, take a jellyfish out of the water, and it becomes a much less fascinating blob. This is because jellyfish are about 95 percent water.</p>
+                <p class="description"></p>
             </div>
         </section>
         <img class="arrow-right" src="https://mfanorth.z16.web.core.windows.net/syllabus/week03/assets/arrow.svg" alt="arrow">
     </div>
-    <div id="thumbnails">
+    <div class="thumbnails">
         <ul class="thumbnailslist">
         </ul>
     </div>
